--- a/foursquaresearch/templates/foursquaresearch/imlookingfor.html
+++ b/foursquaresearch/templates/foursquaresearch/imlookingfor.html
@@ -76,7 +76,7 @@ $('.addToFavorite').submit(function(e) {
         <td>{{ venue.location.address }}</td>
         {% if logged_in %}
         <td>
-          <form action={% url 'add_to_favorites' %} method="post">
+          <form action={% url 'add_to_favorites' %} method="post" class='addToFavorite'>
             {% csrf_token %}
             <input type="hidden" name="id" value="{{ venue.id }}"/>
             <input type="hidden" name="name" value="{{ venue.name }}"/>
