--- a/foursquaresearch/templates/foursquaresearch/header.html
+++ b/foursquaresearch/templates/foursquaresearch/header.html
@@ -3,14 +3,20 @@
 <head>
   <title>Foursquare Ultima</title>
   {% load staticfiles %}
+
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type = "text/css"/>
   <meta name="viewport" content = "width=device-width, initial-scale=1.0">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body >
+<body>
   <header>
     <div class="row">
+      <div class="col-sm-1">
+        <center>
+          {% now "SHORT_DATETIME_FORMAT" %}
+        </center>
+      </div>
       <div class="col-sm-8">
         <center>
           <h1><a href="/">The Ultimate Foursquare Client</a></h1>
@@ -21,7 +27,7 @@
         <div class="col-sm-1">
           <div class="dropdown">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              Hi, {{ username }} :)
+              Hi, {{ username|capfirst }} :)
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
