--- a/foursquaresearch/templates/foursquaresearch/header.html
+++ b/foursquaresearch/templates/foursquaresearch/header.html
@@ -23,7 +23,7 @@
         </center>
       </div>
       <div>
-        {% if logged_in %}
+        {% if user.is_authenticated %}
         <div class="col-sm-1">
           <div class="dropdown">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -38,7 +38,7 @@
           </div>
         </div>
 
-        {% elif not logged_in %}
+        {% elif not user.is_authenticated %}
         <div class="col-sm-1">
           <h5><a href={% url 'registration' %}>Register</a></h5>
         </div>
@@ -66,7 +66,6 @@ jQuery(document).ready(function($) {
   });
 });
 </script>
-<script src="{% static 'js/app.js' %}"></script>
 {% block javascript %}{% endblock %}
 </footer>
 </body>
