--- a/foursquaresearch/templates/foursquaresearch/base.html
+++ b/foursquaresearch/templates/foursquaresearch/base.html
@@ -2,61 +2,54 @@
 {% include "search-history.html" %}
 
 {% block body %}
-<div class="row">
-  <div class="col-sm-1">
-  </div>
-  <div class="col-sm-5">
-    <center>
-      <br><br>
-      <form class="form-inline" action="{% url 'index' %}" method="get">
-        <input type="text" name="look_for" placeholder= "I am looking for...">
-        <input type="text" name="location" placeholder= "Location">
-        <button type="submit" class="btn btn-primary">OK</button>
-      </form>
-    </center>
-  </div>
-</div>
-<div class="row">
-  {% block search %}
-  {% endblock %}
-  {% block favorites %}
-  {% endblock %}
-  {% block prev_searches %}
-  <div class="col-sm-2">
-    <div>
-      <center>
-        <h3>Previous Searches<br></h3>
-        <table class="table table-striped">
-          {% for h in history %}
-          <tr class="clickable-row">
-            <form action="{% url 'index' %}" method="get" >
-              <input type="hidden" name="look_for" value="{{ h.search_key }}"/>
-              <input type="hidden" name="location" value="{{ h.search_location }}"/>
-              <td><button type="submit" class="btn-link">{{ h.search_key }}</button></td>
-              <td><button type="submit" class="btn-link">in</button></td>
-              <td><button type="submit" class="btn-link">{{ h.search_location }}</button>
-              </form></td>
-            </tr>
-            {% empty %}
-            <tr>Your search history is empty :(</tr>
-            {% endfor %}
-          </table>
-        </center>
-      </div>
-      <div>
-        <center>
-          <h3>Active users</h3><h5>(last 15 minutes)<br></h5>
-          <table class="table table-striped">
-            {% for user in last_active_users %}
-              <tr><td>{{user|capfirst}}</td></tr>
-              {% empty %}
-              It feels scary, to have no active user :(
-              {% endfor %}
-            </table>
-          </center>
+    <div class="row">
+        <div class="col-sm-1">
         </div>
-      </div>
-      {% endblock %}
+        <div class="col-sm-5">
+            <div style="text-align: center;">
+                <br><br>
+                <form class="form-inline" action="{% url 'index' %}" method="get">
+                    <input type="text" name="look_for" placeholder= "I am looking for...">
+                    <input type="text" name="location" placeholder= "Location">
+                    <button type="submit" class="btn btn-primary">OK</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        {% block search %}
+        {% endblock %}
+        {% block favorites %}
+        {% endblock %}
+        {% block prev_searches %}
+            <div class="col-sm-2">
+                <div>
+                    <div style="text-align: center;">
+                        <h3>Previous Searches<br></h3>
+                            <div class="btn-group-vertical" role="group">
+                            {% for h in history %}
+                                    <a href="/?look_for={{ h.search_key }}&location={{ h.search_location }}" role="button"  class="btn btn-info btn-sm">
+                                        {{ h.search_key }} in {{ h.search_location }}</a>
+                            {% empty %}
+                                Your search history is empty :(
+                            {% endfor %}
+                         </div>
+                    </div>
+                </div>
+                <div>
+                    <div style="text-align: center;">
+                        <h3>Active users</h3><h5>(last 15 minutes)<br></h5>
+                        <table class="table table-striped">
+                            {% for user in last_active_users %}
+                                <tr><td>{{user|capfirst}}</td></tr>
+                            {% empty %}
+                                It feels scary, to have no active user :(
+                            {% endfor %}
+                        </table>
+                    </div>
+                </div>
+            </div>
+        {% endblock %}
     </div>
     {% comment %}<script>
 
@@ -93,4 +86,4 @@
       /* ends ajax submission process */
     });
     </script>{% endcomment %}
-    {% endblock %}
+{% endblock %}
