--- a/foursquaresearch/templates/foursquaresearch/data.html
+++ b/foursquaresearch/templates/foursquaresearch/data.html
@@ -1,3 +1,21 @@
+{% if venue.id in favorite_list %}
+                                        <form action={% url 'remove_from_favorites_while_searching' %} method="post" class='removeFromFavorite'>
+                                            {% csrf_token %}
+                                            <input type="hidden" name="id" value="{{ venue.id }}"/>
+                                            <input type="hidden" name="name" value="{{ venue.name }}"/>
+                                            <input type="hidden" name="location" value="{{ venue.location.address }}"/>
+                                            <button class="btn-link remove-favorite">DEL</button>
+                                        </form>
+                                    {% else %}
+                                        <form action={% url 'add_to_favorites' %} method="post" class='addToFavorite'>
+                                            {% csrf_token %}
+                                            <input type="hidden" name="id" value="{{ venue.id }}"/>
+                                            <input type="hidden" name="name" value="{{ venue.name }}"/>
+                                            <input type="hidden" name="location" value="{{ venue.location.address }}"/>
+                                            <button class="btn-link add-fav">FAV</button>
+                                        </form>
+                                    {% endif %}
+
 {"meta":
 {
 "code":200,
